--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,280 +1,5 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-* {
-    font-family: "Poppins", sans-serif;
-}
-
-.hamburger {
-    cursor: pointer;
-}
-
-.hamburger input {
-    display: none;
-}
-
-.hamburger svg {
-    /* The size of the SVG defines the overall size */
-    height: 3em;
-    /* Define the transition for transforming the SVG */
-    transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.line {
-    fill: none;
-    stroke: white;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-    stroke-width: 3;
-    /* Define the transition for transforming the Stroke */
-    transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
-        stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.line-top-bottom {
-    stroke-dasharray: 12 63;
-}
-
-.hamburger input:checked + svg {
-    transform: rotate(-45deg);
-}
-
-.hamburger input:checked + svg .line-top-bottom {
-    stroke-dasharray: 20 300;
-    stroke-dashoffset: -32.42;
-}
-
-/* loader */
-.loader {
-    width: 112px;
-    height: 112px;
-}
-
-.box1,
-.box2,
-.box3 {
-    border: 16px solid #3b82f6;
-    box-sizing: border-box;
-    position: absolute;
-    display: block;
-}
-
-.box1 {
-    width: 112px;
-    height: 48px;
-    margin-top: 64px;
-    margin-left: 0px;
-    animation: abox1 4s 1s forwards ease-in-out infinite;
-}
-
-.box2 {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 0px;
-    animation: abox2 4s 1s forwards ease-in-out infinite;
-}
-
-.box3 {
-    width: 48px;
-    height: 48px;
-    margin-top: 0px;
-    margin-left: 64px;
-    animation: abox3 4s 1s forwards ease-in-out infinite;
-}
-
-@keyframes abox1 {
-    0% {
-        width: 112px;
-        height: 48px;
-        margin-top: 64px;
-        margin-left: 0px;
-    }
-
-    12.5% {
-        width: 48px;
-        height: 48px;
-        margin-top: 64px;
-        margin-left: 0px;
-    }
-
-    25% {
-        width: 48px;
-        height: 48px;
-        margin-top: 64px;
-        margin-left: 0px;
-    }
-
-    37.5% {
-        width: 48px;
-        height: 48px;
-        margin-top: 64px;
-        margin-left: 0px;
-    }
-
-    50% {
-        width: 48px;
-        height: 48px;
-        margin-top: 64px;
-        margin-left: 0px;
-    }
-
-    62.5% {
-        width: 48px;
-        height: 48px;
-        margin-top: 64px;
-        margin-left: 0px;
-    }
-
-    75% {
-        width: 48px;
-        height: 112px;
-        margin-top: 0px;
-        margin-left: 0px;
-    }
-
-    87.5% {
-        width: 48px;
-        height: 48px;
-        margin-top: 0px;
-        margin-left: 0px;
-    }
-
-    100% {
-        width: 48px;
-        height: 48px;
-        margin-top: 0px;
-        margin-left: 0px;
-    }
-}
-
-@keyframes abox2 {
-    0% {
-        width: 48px;
-        height: 48px;
-        margin-top: 0px;
-        margin-left: 0px;
-    }
-
-    12.5% {
-        width: 48px;
-        height: 48px;
-        margin-top: 0px;
-        margin-left: 0px;
-    }
-
-    25% {
-        width: 48px;
-        height: 48px;
-        margin-top: 0px;
-        margin-left: 0px;
-    }
-
-    37.5% {
-        width: 48px;
-        height: 48px;
-        margin-top: 0px;
-        margin-left: 0px;
-    }
-
-    50% {
-        width: 112px;
-        height: 48px;
-        margin-top: 0px;
-        margin-left: 0px;
-    }
-
-    62.5% {
-        width: 48px;
-        height: 48px;
-        margin-top: 0px;
-        margin-left: 64px;
-    }
-
-    75% {
-        width: 48px;
-        height: 48px;
-        margin-top: 0px;
-        margin-left: 64px;
-    }
-
-    87.5% {
-        width: 48px;
-        height: 48px;
-        margin-top: 0px;
-        margin-left: 64px;
-    }
-
-    100% {
-        width: 48px;
-        height: 48px;
-        margin-top: 0px;
-        margin-left: 64px;
-    }
-}
-
-@keyframes abox3 {
-    0% {
-        width: 48px;
-        height: 48px;
-        margin-top: 0px;
-        margin-left: 64px;
-    }
-
-    12.5% {
-        width: 48px;
-        height: 48px;
-        margin-top: 0px;
-        margin-left: 64px;
-    }
-
-    25% {
-        width: 48px;
-        height: 112px;
-        margin-top: 0px;
-        margin-left: 64px;
-    }
-
-    37.5% {
-        width: 48px;
-        height: 48px;
-        margin-top: 64px;
-        margin-left: 64px;
-    }
-
-    50% {
-        width: 48px;
-        height: 48px;
-        margin-top: 64px;
-        margin-left: 64px;
-    }
-
-    62.5% {
-        width: 48px;
-        height: 48px;
-        margin-top: 64px;
-        margin-left: 64px;
-    }
-
-    75% {
-        width: 48px;
-        height: 48px;
-        margin-top: 64px;
-        margin-left: 64px;
-    }
-
-    87.5% {
-        width: 48px;
-        height: 48px;
-        margin-top: 64px;
-        margin-left: 64px;
-    }
-
-    100% {
-        width: 112px;
-        height: 48px;
-        margin-top: 64px;
-        margin-left: 0px;
-    }
-}
+/* minify css  hamburger animation*/
+*{font-family:"Poppins",sans-serif}.hamburger{cursor:pointer}.hamburger input{display:none}.hamburger svg{height:3em;transition:transform 600ms cubic-bezier(.4,0,.2,1)}.line{fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:3;transition:stroke-dasharray 600ms cubic-bezier(.4,0,.2,1),stroke-dashoffset 600ms cubic-bezier(.4,0,.2,1)}.line-top-bottom{stroke-dasharray:12 63}.hamburger input:checked+svg{transform:rotate(-45deg)}.hamburger input:checked+svg .line-top-bottom{stroke-dasharray:20 300;stroke-dashoffset:-32.42}.loader{width:112px;height:112px}.box1,.box2,.box3{border:16px solid #3b82f6;box-sizing:border-box;position:absolute;display:block}.box1{width:112px;height:48px;margin-top:64px;margin-left:0;animation:abox1 4s 1s forwards ease-in-out infinite}.box2{width:48px;height:48px;margin-top:0;margin-left:0;animation:abox2 4s 1s forwards ease-in-out infinite}.box3{width:48px;height:48px;margin-top:0;margin-left:64px;animation:abox3 4s 1s forwards ease-in-out infinite}@keyframes abox1{0%{width:112px;height:48px;margin-top:64px;margin-left:0}12.5%{width:48px;height:48px;margin-top:64px;margin-left:0}25%{width:48px;height:48px;margin-top:64px;margin-left:0}37.5%{width:48px;height:48px;margin-top:64px;margin-left:0}50%{width:48px;height:48px;margin-top:64px;margin-left:0}62.5%{width:48px;height:48px;margin-top:64px;margin-left:0}75%{width:48px;height:112px;margin-top:0;margin-left:0}87.5%{width:48px;height:48px;margin-top:0;margin-left:0}100%{width:48px;height:48px;margin-top:0;margin-left:0}}@keyframes abox2{0%{width:48px;height:48px;margin-top:0;margin-left:0}12.5%{width:48px;height:48px;margin-top:0;margin-left:0}25%{width:48px;height:48px;margin-top:0;margin-left:0}37.5%{width:48px;height:48px;margin-top:0;margin-left:0}50%{width:112px;height:48px;margin-top:0;margin-left:0}62.5%{width:48px;height:48px;margin-top:0;margin-left:64px}75%{width:48px;height:48px;margin-top:0;margin-left:64px}87.5%{width:48px;height:48px;margin-top:0;margin-left:64px}100%{width:48px;height:48px;margin-top:0;margin-left:64px}}@keyframes abox3{0%{width:48px;height:48px;margin-top:0;margin-left:64px}12.5%{width:48px;height:48px;margin-top:0;margin-left:64px}25%{width:48px;height:112px;margin-top:0;margin-left:64px}37.5%{width:48px;height:48px;margin-top:64px;margin-left:64px}50%{width:48px;height:48px;margin-top:64px;margin-left:64px}62.5%{width:48px;height:48px;margin-top:64px;margin-left:64px}75%{width:48px;height:48px;margin-top:64px;margin-left:64px}87.5%{width:48px;height:48px;margin-top:64px;margin-left:64px}100%{width:112px;height:48px;margin-top:64px;margin-left:0}}
